src/test/ui/imports/import-crate-var.stderr
error: `$crate` may not be imported
  --> $DIR/import-crate-var.rs:7:5
   |
LL |     m!();
   |     ^^^^^
   |
   = note: this warning originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

